--- a/src/features/StreetcodePage/InterestingFactsBlock/InterestingFactItem/InterestingFactItem.styles.scss
+++ b/src/features/StreetcodePage/InterestingFactsBlock/InterestingFactItem/InterestingFactItem.styles.scss
@@ -69,14 +69,58 @@
   &:hover {
     color: c.$accented-red-color;
   }
-  
 }
 
-@media screen
-and (max-width: 1024px){
- .interestingFactSlide {
+@media screen and (max-width: 1450px){
+  .interestingFactSlide {
+    @include mut.sized(245px,250px);
+  }
+  
+  .interestingFactsSliderContainer {
+    .slick-track {
+      @include mut.flexed($align-items: flex-start, $gap: 10px);
+    }
+  }    
+
+  .interestingFactSlide {
+    @include mut.full-rounded(20px);
+    
+     .slideImage {
+       @include mut.sized(100%, 142px);
+       @include mut.rounded(20px, 20px);
+
+      img{
+        @include mut.sized(100%, 100%)
+      }
+     }
+     .slideText {
+       @include mut.sized(100%, 145px);
+        @include mut.rounded(0);
+
+       .heading {
+        @include mut.rem-padded(7px, 20px, 6px, 12px);
+        @include mut.with-font($font-weight: 500, $font-size: 12px);
+         line-height: f.pxToEm(12px);
+       }
+       .mainText {
+        @include mut.rem-padded(0, 12px, 0px, 12px);
+         @include mut.with-font($font-weight: 300, $font-size: 10px);
+         line-height: f.pxToEm(16px);
+       }
+     } 
+  
+     .readMoreParagraph {
+      @include mut.rem-padded(6px, 20px, 0px, 12px);
+      @include mut.with-font(ft.$roboto-font, 300, 10px, normal);        
+     }
+  } 
+}
+
+@media screen and (max-width: 1024px){
+  .interestingFactSlide {
     @include mut.sized(205px,240px);
   }
+  
   .interestingFactsSliderContainer {
     .slick-track {
       @include mut.flexed($align-items: flex-start, $gap: 10px);
@@ -110,23 +154,20 @@ and (max-width: 1024px){
       @include mut.sized(8px, 8px);
     }
     li button:before {
+      text-align: center; 
+      justify-content: center;
+      left: -20% !important;
 
-        text-align: center; 
-        justify-content: center;
-        left: -20% !important;
-
-        @include mut.rem-margined($right:5px, $left:5px);
+      @include mut.rem-margined($right:5px, $left:5px);
 
 
-        list-style: none;
-        text-align: center;
-        @include mut.sized(8px, 8px);
-      }
-    
-  
-  }    
+      list-style: none;
+      text-align: center;
+      @include mut.sized(8px, 8px);
+    }
+  }  
+
   .interestingFactSlide {
-   
     @include mut.full-rounded(20px);
     
      .slideImage {
@@ -161,8 +202,7 @@ and (max-width: 1024px){
   } 
  }
 
-@media screen
-and (min-width: 768px) and (max-width: 1000px) {
+@media screen and (min-width: 768px) and (max-width: 1000px) {
   .interestingFactsSliderContainer{
     @include mut.sized(100%);
 
