--- a/src/features/StreetcodePage/RelatedFiguresBlock/RelatedFigures.styles.scss
+++ b/src/features/StreetcodePage/RelatedFiguresBlock/RelatedFigures.styles.scss
@@ -5,8 +5,8 @@
 
 $moreInfo-width: 150px;
 
-.relatedFiguresWrapper {
-    @include wr.main-page-block-wrapper();
+.relatedFiguresWrapper.container{
+    margin-top: f.pxToRem(120px);
 }
 
 .smallWrapper {
@@ -17,15 +17,10 @@ $moreInfo-width: 150px;
             display: none;
         }
     }
-
-    .moreInfo p {
-        color: c.$pure-white-color;
-    }
 }
 
 .relatedFiguresContainer {
-    @include mut.sized($width: 90%, $height: 100%);
-    @include mut.flexed($direction: column, $align-items: center);
+    @include mut.sized($width: 100%, $height: 100%);
 }
 
 .headingWrapper {
@@ -34,8 +29,9 @@ $moreInfo-width: 150px;
 
 .moreInfo {
     position: absolute;
-    bottom: f.pxToRem(70px);
-    left: f.pxToRem(455px);
+    bottom: f.pxToRem(-70px);
+    left: f.pxToRem(15px);
+
     width: $moreInfo-width;
     p {
         @include mut.with-font($font-weight: 500, $font-size: 20px);
@@ -55,7 +51,10 @@ $moreInfo-width: 150px;
 }
 
 .relatedFiguresSliderContainer {
+    position: relative;
+
     @include mut.sized($width: 1216px);
+    margin: 0 auto;
 
     .slick-arrow {
         top: f.pxToRem(213px);
@@ -110,7 +109,7 @@ $moreInfo-width: 150px;
         }
     }
 
-    .moreInfo p {
-        color: c.$pure-white-color;
+    .moreInfo {
+        display: none;
     }
 }
