--- a/src/features/StreetcodePage/InterestingFactsBlock/InterestingFacts.styles.scss
+++ b/src/features/StreetcodePage/InterestingFactsBlock/InterestingFacts.styles.scss
@@ -95,7 +95,15 @@
 }
 
 @media screen and (max-width: 1450px){
-    
+    .interestingFactsSliderContainer {
+        @include mut.sized(930px);
+    }
+}
+
+@media screen and (max-width: 1200px){
+    .interestingFactsSliderContainer {
+        @include mut.sized(830px);
+    }
 }
 
 @media screen and (max-width: 1024px){
