--- a/src/features/AdditionalPages/PartnersPage/Partners.styles.scss
+++ b/src/features/AdditionalPages/PartnersPage/Partners.styles.scss
@@ -9,8 +9,9 @@
 
 .partnersContainer{
     position: relative;
+    
     width: 100vw;
-    min-height: 100vh;
+    height: 100%;
     
     padding: f.pxToRem(112px) f.pxToRem(10px) f.pxToRem(110px) f.pxToRem(10px);
 
