--- a/src/features/StreetcodePage/SourcesBlock/Sources.styles.scss
+++ b/src/features/StreetcodePage/SourcesBlock/Sources.styles.scss
@@ -7,6 +7,10 @@
 .sourcesWrapper {
     @include wr.main-page-block-wrapper();
 
+    &.container{
+        margin-top: pxToRem(160px);
+    }
+
     .sourcesContainer {
         @include mut.sizedImportant(100%, 400px);
         margin-bottom: pxToRem(190px);
@@ -64,15 +68,26 @@
             }
         }
 
-        
-    }
-
-    @media screen and (max-width: 1024px) {
-        .sourcesSliderContainer {
-            .slick-track {
-                @include mut.flexed($justify-content: flex-start, $align-items: flex-start, $gap: 10px);
-                margin: 0 10px;
+        @media screen and (max-width: 1024px) {
+            .sourcesSliderContainer {
+                .slick-track {
+                    @include mut.flexed($justify-content: flex-start, $align-items: flex-start, $gap: 10px);
+                    margin: 0 10px;
+                }
             }
-        }
+        }     
     }
 }
+
+@media screen and (max-width: 1024px) {
+    .sourcesWrapper .sourcesContainer {
+        margin-bottom: pxToRem(86px);
+    }
+}
+
+@media screen and (max-width: 780px) {
+    .sourcesWrapper .sourcesContainer {
+        margin-bottom: 0;
+    }
+}
+
