--- a/src/features/AdditionalPages/SupportUsPage/SupportUs.styles.scss
+++ b/src/features/AdditionalPages/SupportUsPage/SupportUs.styles.scss
@@ -7,6 +7,7 @@
 .supportUsPageWrapper {
     padding: 110px 12.5% 0;
     width: 100%;
+    height: 100%;
 
     background: url('@/assets/images/donates/donatesPage/background.svg') no-repeat center center / cover;
       
