--- a/src/features/StreetcodeCatalogPage/StreetcodeCatalog.styles.scss
+++ b/src/features/StreetcodeCatalogPage/StreetcodeCatalog.styles.scss
@@ -14,7 +14,7 @@ $loadImg: '@assets/images/catalog/loading.gif';
     width: 100%;
 
     height: 100%;
-    min-height: 100vh;
+    height: 100%;
 
     .streetcodeCatalogHeading {
         @include mut.with-font('Closer Text', 500, 96px, normal);
