--- a/src/features/StreetcodePage/HeadingBlock/BlockHeading.styles.scss
+++ b/src/features/StreetcodePage/HeadingBlock/BlockHeading.styles.scss
@@ -33,26 +33,22 @@
     }
 }
 
+@media (max-width: 1024px) {
+    .blockHeadingWrapper{
+        margin-left: f.pxToRem(40px);
+    }
+
+    .blockHeadingText {
+        @include mut.positioned-as(relative, $left: -91px, $top: 43px);
+        @include mut.with-font(ft.$closer-text-font, $font-weight: 500, $font-size: 32px);
+    }
+}
+
 @media (max-width: 768px) {
     .blockHeadingWrapper{
-        margin-left: f.pxToRem(28px);
+        margin-left: f.pxToRem(45px);
     }
     .blockHeadingText {
-        @include mut.positioned-as(relative, $left: -71px, $top: 35px);
-        @include mut.with-font(ft.$closer-text-font, $font-weight: 500, $font-size: 32px);
-    }
-}
-
-@media (max-width: 480px) {
-    .blockHeadingText {
-        @include mut.positioned-as(relative, $left: -71px, $top: 35px);
-        @include mut.with-font(ft.$closer-text-font, $font-weight: 500, $font-size: 32px);
-    }
-}
-
-@media (max-width: 280px) {
-    .blockHeadingText {
-        @include mut.positioned-as(relative, $left: -71px, $top: 50px);
-        @include mut.with-font(ft.$closer-text-font, $font-weight: 500, $font-size: 22px);
+        @include mut.positioned-as(relative, $left: -81px, $top: 35px);
     }
 }
