--- a/src/features/StreetcodePage/InterestingFactsBlock/InterestingFacts.styles.scss
+++ b/src/features/StreetcodePage/InterestingFactsBlock/InterestingFacts.styles.scss
@@ -13,7 +13,7 @@
     @include mut.sized(100%);
     @include mut.flex-centered($direction: column);
     .blockHeadingWrapper{
-        padding-left: 12px;
+        padding-left: f.pxToRem(12px);
     }
 }
 
@@ -29,10 +29,9 @@
     }
 
     .slick-dots{
-        bottom: -57px;
+        bottom: f.pxToRem(-57px);
     }
 }
-
 
 .heightContainer {
     padding-top: pxToRem(23px);
@@ -97,6 +96,12 @@
 @media screen and (max-width: 1450px){
     .interestingFactsSliderContainer {
         @include mut.sized(930px);
+    }
+
+    .interestingFactsSliderContainer {
+        .slick-dots{
+            bottom: auto;
+        }
     }
 }
 
@@ -241,8 +246,7 @@ and (min-width: 768px) and (max-width: 1023px){
     }
 }
 
-@media screen
-and (max-width: 768px){
+@media screen and (max-width: 768px){
     .interestingFactsWrapper {
         @include wr.main-page-block-wrapper();
         .slick-dots{
@@ -265,7 +269,6 @@ and (max-width: 768px){
 
 
 .singleSlideContainer{
-
     .interestingFactSlide{
         @include mut.sized(345px);
 
@@ -339,7 +342,6 @@ and (max-width: 768px){
         }
     }
     .singleSlideContainer{
-
         padding-top:15.5%;
 
         .interestingFactSlide{
@@ -383,7 +385,6 @@ and (max-width: 768px){
                 }
             }
         }
-      
     }
 }
 
