--- a/src/features/StreetcodePage/MapBlock/MapBlock.styles.scss
+++ b/src/features/StreetcodePage/MapBlock/MapBlock.styles.scss
@@ -1,10 +1,16 @@
 @use "@sass/mixins/_utils.mixins.scss" as mut;
 @use "@sass/_utils.functions.scss" as f;
 
-
 .mapBlockContainer{
    @include mut.positioned-as(relative);
   .leaflet-container {
     z-index: 1;
   }
 }
+
+@media screen and (max-width: 1024px) {
+  .mapBlockContainer{
+    margin-top: f.pxToRem(75px);
+  }
+}
+
