--- a/src/features/StreetcodePage/RelatedFiguresBlock/RelatedFigures.styles.scss
+++ b/src/features/StreetcodePage/RelatedFiguresBlock/RelatedFigures.styles.scss
@@ -29,7 +29,7 @@ $moreInfo-width: 150px;
 
 .moreInfo {
     position: absolute;
-    bottom: f.pxToRem(-70px);
+    bottom: 0;
     left: f.pxToRem(15px);
 
     width: $moreInfo-width;
@@ -53,7 +53,7 @@ $moreInfo-width: 150px;
 .relatedFiguresSliderContainer {
     position: relative;
 
-    @include mut.sized($width: 1216px);
+    @include mut.sized($width: 1216px, $height: 450px);
     margin: 0 auto;
 
     .slick-arrow {
