--- a/src/features/StreetcodePage/ArtGalleryBlock/ArtGalleryBlock.styles.scss
+++ b/src/features/StreetcodePage/ArtGalleryBlock/ArtGalleryBlock.styles.scss
@@ -28,13 +28,39 @@
         width: pxToRem(1230px);
     }
 }
+@media screen and (max-width:1450px) {
+    .artGalleryWrapper {
+        .artGalleryContainer {
+            .artGalleryContentContainer{
+                .artGallerySliderContainer{
+                    width: pxToRem(1045.5px);
+                }
+            }
+        }
+    }
+}
+@media screen and (max-width:1200px) {//-32.5%
+    .artGalleryWrapper {
+        .artGalleryContainer {
+            .artGalleryContentContainer{
+                .artGallerySliderContainer{
+                    width: pxToRem(830px);
+                }
+            }
+        }
+    }
+}
 
 @media screen and (max-width:1025px) {
     .artGalleryWrapper {
         .artGalleryContainer {
-            @include mut.sized(92%, 100%);
             .slick-list {
                 margin-left: pxToRem(-10px);
+            }
+            .artGalleryContentContainer{
+                .artGallerySliderContainer{
+                    @include mut.sized(1025px, 100%);
+                }
             }
 
         }
