--- a/src/features/StreetcodePage/RelatedFiguresBlock/RelatedFigures.styles.scss
+++ b/src/features/StreetcodePage/RelatedFiguresBlock/RelatedFigures.styles.scss
@@ -57,7 +57,7 @@ $moreInfo-width: 150px;
     margin: 0 auto;
 
     .slick-arrow {
-        top: f.pxToRem(213px);
+        top: 45%;
     }
 
     .slick-list {
