--- a/src/features/SlickSlider/SlickSlider.styles.scss
+++ b/src/features/SlickSlider/SlickSlider.styles.scss
@@ -55,13 +55,14 @@ li.slick-active button:before {
 }
 
 .sliderClass {
-
     width: 100%;
-    .slider-item-container{
-        display: flex !important;
+
+    .slider-item-container {
+        display: flex;
         position: relative;
         flex-direction: row;
-        .left{
+
+        .left {
             position: absolute;
             width: 180px;
             height: 100%;
@@ -69,7 +70,7 @@ li.slick-active button:before {
             opacity: 0;
         }
     
-        .right{
+        .right {
             position: absolute;
             width: 180px;
             height: 100%;
@@ -90,19 +91,19 @@ li.slick-active button:before {
     }
 }
 
-@media screen and (max-width:1024px) {
+@media screen and (max-width: 1024px) {
     .slick-next,
     .slick-prev {
         visibility:hidden;
     }
 
     .sliderClass {
-        .slider-item-container{
-            .left{
+        .slider-item-container {
+            .left {
                 width: 100px;
             }
         
-            .right{
+            .right {
                 width: 100px;
             }
         }
