--- a/src/features/MainPage/NewsSlider/NewsSlider.styles.scss
+++ b/src/features/MainPage/NewsSlider/NewsSlider.styles.scss
@@ -2,31 +2,20 @@
 @use "@sass/_utils.functions.scss" as f;
 @use "@sass/variables/_variables.colors.scss" as c;
 
-$bgImg: '@assets/images/streetcode-card/background.png';
-$bgImg: '@assets/images/catalog/background.png';
-
-.streetcodeMainPageWrapper{
-  background: url($bgImg) no-repeat center center / cover;
-  background-color: c.$accented-low-opasity-grayish-gray-color;
+.NewsWrapper{
   width: 100%;
-
-.streetcodeSliderComponent {
-    .streetcodeContainer .mainBlock {
-        @include mut.bg-image($bgImg, auto);
-        background-repeat: repeat-x;
-    }
-
-    .streetcodeSliderContentBlock,
+.newsSliderComponent {
+    .newsSliderContentBlock,
     .blockCentering {
         @include mut.flex-centered();
     }
 
-    .streetcodeSliderContainer {
+    .newsSliderContainer {
         width: 100%;
         position: relative;
     }
 
-    .streetcodeSliderContent {
+    .newsSliderContent {
         width: 100%;
         @include mut.flex-centered();
         margin-top: f.pxToRem(10px);
@@ -53,7 +42,7 @@ $bgImg: '@assets/images/catalog/background.png';
 
     .slick-initialized .slick-slide {
         @include mut.flexed($justify-content: center, $gap: 0px);
-        @include mut.rem-margined($top: 20px, $right: 0px, $bottom: 10px, $left: 0px);
+        @include mut.rem-margined($top: 0px, $right: 0px, $bottom: 10px, $left: 0px);
     }
 }
 }
