--- a/src/features/StreetcodePage/MapBlock/Map/Marker/Marker.styles.scss
+++ b/src/features/StreetcodePage/MapBlock/Map/Marker/Marker.styles.scss
@@ -7,4 +7,9 @@
   background: c.$pure-white-color;
   border: 4px solid c.$accented-red-color;
   border-radius: 50%;
+  @media screen and (max-width: 480px) {
+    @include mut.sized(18px, 18px);
+    border: 3px solid c.$accented-red-color;
+  }
+
 }
