--- a/src/app/layout/footer/Footer.styles.scss
+++ b/src/app/layout/footer/Footer.styles.scss
@@ -69,18 +69,16 @@
   }
 
   .socialIconContainer {
-    margin-top: pxToRem(29px);
+    @include mut.rem-margined($top: 29px);
     color: c.$pure-white-color;
     @include mut.with-font($font-weight: 300, $font-size: 15px);
-    margin-right: 10%;
-    display: flex;
-    align-items: center;
-     height: pxToRem(27px);
+    @include mut.flexed($align-items: center);
+    @include mut.sized($height: 27px);
     > * {
-      margin-right: pxToRem(14.62px);
+     @include mut.rem-margined($right: 14.62px);
     }
       li:nth-child(5) {
-        height: 20px;
+        @include mut.sized($height: 20px);
       }
   }
 }
