Revert "Dev master max fixes"

--- a/src/features/AdditionalPages/NotFoundPage/NotFound.styles.scss
+++ b/src/features/AdditionalPages/NotFoundPage/NotFound.styles.scss
@@ -7,8 +7,7 @@
     @include mut.flexed($justify-content: center, $align-items: center, $direction: column);
 
     width: 100vw;
-    height: 100%;
-    
+    height: 100vh;
     padding: f.pxToRem(10px);
     @include mut.bg-image('../../../assets/images/streetcode-card/background.png');
       
