--- a/src/features/StreetcodePage/PartnersBlock/Partners.styles.scss
+++ b/src/features/StreetcodePage/PartnersBlock/Partners.styles.scss
@@ -3,11 +3,12 @@
 
 .partnersWrapper {
     @include mut.flex-centered();
+    margin-top: f.pxToRem(20px);
     
     @include mut.rem-padded($top: 30px, $right: 200px, $bottom: 30px, $left: 200px);
 
     .partnerContainer {
-        @include mut.sized($width: 100%, $height: 181px);
+        @include mut.sized($width: 100%, $height: 100%);
         @include mut.flexed($justify-content: space-between, $align-items: center, $direction: row);
 
         .slick-slide{
@@ -27,17 +28,11 @@
     }
 }
 @media screen and (max-width: 1024px) {
-    .partnerContainer {
-        height: f.pxToRem(134px) !important;
-    }
     .partnerItem{
         transform: scale(0.65);
     }      
 }
 @media screen and (max-width: 480px) {
-    .partnerContainer {
-        height: f.pxToRem(124px) !important;
-    }
     .partnerItem{
         padding: f.pxToRem(10px);
     }      
